{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 34,
  "lineage": "3b545b2d-ca8a-bf5b-2818-9cc79a4da992",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900932047199:listener/app/dr-ha-app-alb/116906cd13ae2867/ba0edf0792dcb241",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:900932047199:targetgroup/dr-ha-app-tg/f7afe9259203a65c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:900932047199:listener/app/dr-ha-app-alb/116906cd13ae2867/ba0edf0792dcb241",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:900932047199:loadbalancer/app/dr-ha-app-alb/116906cd13ae2867",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:security-group/sg-00244956e10651cc9",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00244956e10651cc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dr-ha-app-sg",
            "name_prefix": "",
            "owner_id": "900932047199",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900932047199:loadbalancer/app/dr-ha-app-alb/116906cd13ae2867",
            "arn_suffix": "app/dr-ha-app-alb/116906cd13ae2867",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dr-ha-app-alb-571517816.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:900932047199:loadbalancer/app/dr-ha-app-alb/116906cd13ae2867",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dr-ha-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00244956e10651cc9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08e76e288230f18ae"
              },
              {
                "subnet_id": "subnet-0bdce0bd6d53e46e8"
              }
            ],
            "subnets": [
              "subnet-08e76e288230f18ae",
              "subnet-0bdce0bd6d53e46e8"
            ],
            "tags": {
              "Name": "dr-ha-app-alb"
            },
            "tags_all": {
              "Name": "dr-ha-app-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:900932047199:targetgroup/dr-ha-app-tg/f7afe9259203a65c",
            "arn_suffix": "targetgroup/dr-ha-app-tg/f7afe9259203a65c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:900932047199:targetgroup/dr-ha-app-tg/f7afe9259203a65c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dr-ha-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dr-ha-app-tg"
            },
            "tags_all": {
              "Name": "dr-ha-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:network-acl/acl-024cc84d07b6b65c1",
            "default_network_acl_id": "acl-024cc84d07b6b65c1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-024cc84d07b6b65c1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "900932047199",
            "subnet_ids": [
              "subnet-03685734cae27151f",
              "subnet-0922206d0e1b783bc"
            ],
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:route-table/rtb-03d32434a2a284c7f",
            "default_route_table_id": "rtb-03d32434a2a284c7f",
            "id": "rtb-03d32434a2a284c7f",
            "owner_id": "900932047199",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:security-group/sg-0306a43ced6a604b5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0306a43ced6a604b5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "900932047199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-default"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:internet-gateway/igw-0329f132e8b12d8a2",
            "id": "igw-0329f132e8b12d8a2",
            "owner_id": "900932047199",
            "tags": {
              "Name": "dr-ha-app-vpc-secondary"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0329f132e8b12d8a2",
            "id": "r-rtb-0ef0844002f6031e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef0844002f6031e6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_internet_gateway.this",
            "module.secondary_vpc.aws_route_table.public",
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:route-table/rtb-0ef0844002f6031e6",
            "id": "rtb-0ef0844002f6031e6",
            "owner_id": "900932047199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-public"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030cf6392d52c9998",
            "route_table_id": "rtb-0ef0844002f6031e6",
            "subnet_id": "subnet-0922206d0e1b783bc"
          },
          "dependencies": [
            "module.secondary_vpc.aws_route_table.public",
            "module.secondary_vpc.aws_subnet.public",
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2a942b0f678cb91",
            "route_table_id": "rtb-0ef0844002f6031e6",
            "subnet_id": "subnet-03685734cae27151f"
          },
          "dependencies": [
            "module.secondary_vpc.aws_route_table.public",
            "module.secondary_vpc.aws_subnet.public",
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:subnet/subnet-0922206d0e1b783bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0922206d0e1b783bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900932047199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-public-us-west-2a"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-public-us-west-2a"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:subnet/subnet-03685734cae27151f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03685734cae27151f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900932047199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-ha-app-vpc-secondary-public-us-west-2b"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary-public-us-west-2b"
            },
            "vpc_id": "vpc-0201ea765afe29960"
          },
          "dependencies": [
            "module.secondary_vpc.aws_vpc.this",
            "module.secondary_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.secondary_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:900932047199:vpc/vpc-0201ea765afe29960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-024cc84d07b6b65c1",
            "default_route_table_id": "rtb-03d32434a2a284c7f",
            "default_security_group_id": "sg-0306a43ced6a604b5",
            "dhcp_options_id": "dopt-08bb15a01b1ceafa6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0201ea765afe29960",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d32434a2a284c7f",
            "owner_id": "900932047199",
            "tags": {
              "Name": "dr-ha-app-vpc-secondary"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-secondary"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:network-acl/acl-036df90eb42125071",
            "default_network_acl_id": "acl-036df90eb42125071",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-036df90eb42125071",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "900932047199",
            "subnet_ids": [
              "subnet-08e76e288230f18ae",
              "subnet-0bdce0bd6d53e46e8"
            ],
            "tags": {
              "Name": "dr-ha-app-vpc-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-default"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:route-table/rtb-03d75342da8275851",
            "default_route_table_id": "rtb-03d75342da8275851",
            "id": "rtb-03d75342da8275851",
            "owner_id": "900932047199",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dr-ha-app-vpc-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:security-group/sg-01bbea60586b82711",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01bbea60586b82711",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "900932047199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dr-ha-app-vpc-default"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-default"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:internet-gateway/igw-05258aa58f61d8f6c",
            "id": "igw-05258aa58f61d8f6c",
            "owner_id": "900932047199",
            "tags": {
              "Name": "dr-ha-app-vpc"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05258aa58f61d8f6c",
            "id": "r-rtb-04468808eaea7b4ae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04468808eaea7b4ae",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:route-table/rtb-04468808eaea7b4ae",
            "id": "rtb-04468808eaea7b4ae",
            "owner_id": "900932047199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dr-ha-app-vpc-public"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056eb8d44a805f270",
            "route_table_id": "rtb-04468808eaea7b4ae",
            "subnet_id": "subnet-0bdce0bd6d53e46e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f942e05cf5ac45cc",
            "route_table_id": "rtb-04468808eaea7b4ae",
            "subnet_id": "subnet-08e76e288230f18ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:subnet/subnet-0bdce0bd6d53e46e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdce0bd6d53e46e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900932047199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-ha-app-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:subnet/subnet-08e76e288230f18ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e76e288230f18ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900932047199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dr-ha-app-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-09fe88372ca2ecc5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:900932047199:vpc/vpc-09fe88372ca2ecc5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036df90eb42125071",
            "default_route_table_id": "rtb-03d75342da8275851",
            "default_security_group_id": "sg-01bbea60586b82711",
            "dhcp_options_id": "dopt-0799f68d6bd9a795d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fe88372ca2ecc5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d75342da8275851",
            "owner_id": "900932047199",
            "tags": {
              "Name": "dr-ha-app-vpc"
            },
            "tags_all": {
              "Name": "dr-ha-app-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}